--- a/project-1/index.html
+++ b/project-1/index.html
@@ -56,7 +56,7 @@
         <div class="padding-sides">
             <h2>Summary</h2>
             <p>At <abbr title="Very Good Printing" class="green">VGP</abbr> we have the best solutions for your printing needs.</p>
-            <p>If you like super short delivery time and super small prices for super high quality, you're in the right place.</p>
+            <p>If you like super short delivery times and super small prices for super high quality, you're in the right place.</p>
             <p>Our printing machines are equipped with the best super lasers to print at speed of light without compromising quality.</p>
             <p>In fact, they improve quality so much that you can see new undiscovered colors.</p>
         </div>
